now u can write note into textarea instead of prompt, fixed a style bug into Accordion mobile view, added roboto font

--- a/gym_app/src/app/globals.css
+++ b/gym_app/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Hanalei+Fill&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanalei+Fill&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -13,5 +13,9 @@
 body {
   color: var(--foreground);
   background: #0a0a0a;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
+
+
+
+
